--- a/picsnap.root/css/style.css
+++ b/picsnap.root/css/style.css
@@ -18,6 +18,7 @@ sans-serif; */
 body {
   font-family: 'Alegreya Sans', sans-serif;
   color: var(--dark-neutral);
+  background-color: #c7a47d26;
 }
 
 .picture2 {
